<resources>
    <string name="app_name">WeatherApp</string>
    <string name="current_temperature_none">--°</string>
    <string name="temperature_range_none">-℃～-℃</string>
    <string name="location_none">--</string>
    <string name="date_none">---</string>

    <string name="wind_direction">Wind Direction</string>
    <string name="wind_level">Wind Level</string>
    <string name="humidity_level">Humidity</string>
    <string name="air_quality">Air Quality</string>
    <string name="sport">Sport</string>
    <string name="ultraviolet_level">Ultraviolet</string>
    <string name="load_weather_info_fail">Load weaher info failed!</string>

    <string name="cloud_graph">卫星云图</string>
    <string name="true_color">真彩色</string>
    <string name="ultra_red">红外</string>
    <string name="vis_color">可见光</string>
    <string name="steam">水汽</string>
    <string name="play">播放卫星云图</string>
    <string name="title_activity_city_list">CityList</string>


    <string name="add">添加城市</string>
    <string name="previous">Previous</string>

    <string name="action_settings">Settings</string>
    <string name="PublicId">HE2007141352421044</string>
    <string name="AppKey">a6e621bd44ed41559b84f5450b42896c</string>
    <string name="add_city">addcity</string>
</resources>
