<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".CloudGraphActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cg_select_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar2"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/cg_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/true_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/true_color"
                    android:textColor="@color/cardview_light_background" />

                <RadioButton
                    android:id="@+id/ultra_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultra_red"
                    android:textColor="@color/cardview_light_background" />

                <RadioButton
                    android:id="@+id/vis_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vis_color"
                    android:textColor="@color/cardview_light_background" />

                <RadioButton
                    android:id="@+id/steam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/steam"
                    android:textColor="@color/cardview_light_background" />
            </RadioGroup>

            <SeekBar
                android:id="@+id/cg_seeker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cg_selection"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:max="10"
                android:progress="3" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/cg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar2"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

</RelativeLayout>